2006-01-15  Kjartan Maraas  <kmaraas@gnome.org>

	* doc/reference/tmpl/gnome-program.sgml: Add deprecation notices
	for the popt stuff and improve the docs for GOption argument
	parsing. Closes bug #317545. (Christian Perch)

2006-01-13  Federico Mena Quintero  <federico@ximian.com>

	* doc/reference/tmpl/gnome-program.sgml: Patch from Tim Müller
	<t.i.m@zen.co.uk> to add an example on how to get non-option
	command-line arguments from a GOptionContext after using
	gnome_program_init().

2006-01-12  Abel Cheung  <maddog@linuxhall.org>

	* configure.in: Added "zh_HK" to ALL_LINGUAS.

2006-01-09  Sebastien Bacher  <seb128@debian.org>

	* schemas/desktop_gnome_interface.schemas.in:
	don't make the toolbars detachable by default (Closes: #326330)

2006-01-09  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Up version.
	* libgnome/.cvsignore: Add a missing file
	* libgnome/gnome-init.c: (gnome_bonobo_activation_module_info_get),
	(libgnome_module_get_goption_group), (libgnome_module_info_get):
	* libgnome/gnome-program.c: (gnome_program_preinit):
	* libgnome/libgnometypes.c: Fix leaks introduced by the move to
	GOption. (Christian Perch). Closes bug #326237.

2006-01-03  Mark McLoughlin  <mark@skynet.ie>

	* configure.in: remove comment which refers to
	code which was removed when we started using
	AM_GCONF_SOURCE_2

2005-12-22  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* libgnome/gnome-help.c: (gnome_help_display_with_doc_id_and_env):
	Fix searching of document when doc_id is NULL. See bug
	#84148.

2005-12-17  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-program.c: (gnome_program_postinit):
	Remove call to g_blow_chunks(). GMemChunks are deprecated
	now and this shouldn't produce much of an ill effect hopefully?
	* monikers/bonobo-config-bag.c: #if 0 out a function that
	is only referenced in a commented out line.

2005-12-13  Gustavo J. A. M. Carneiro  <gjc@inescporto.pt>

	* libgnome/gnome-program.c (gnome_program_init_paramv): Allow